testsuite/tests/jst-modular-extensions/user_error5.compilers.reference
File "user_error5.ml", line 21, characters 25-40:
21 | let _unnamed_extension = [%extension] ();;
                              ^^^^^^^^^^^^^^^
Error: Cannot have an extension node named [%extension]
